--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,47 +1,51 @@
 version: '3.5'
 
-# You may use the following (Linux) command to start Gigwa by dynamically setting the docker0 IP address:
-# export docker0=$(ip a list docker0 | grep "inet " | sed 's/^ *//g' | awk -F'[ |/]' '{print $2}') && docker-compose up -d && sleep 2 && xdg-open http://$docker0:8080/gigwa &> /dev/null
+# Please make a copy of .env.template (renamed as .env) and populate variables there
+# To start Gigwa and mongo together, run docker-compose up -d
 
 services:
   tomcat:
     depends_on:
       - mongo
-    image: guilhemsempere/gigwa:2.5.2-snapshot
+    image: ${GIGWA_DOCKER_IMAGE:-guilhemsempere/gigwa:2.5.2-snapshot}
+    container_name: ${GIGWA_CONTAINER_NAME:-gigwa}
     ports:
-      - 8080:8080 # You may amend the external port only (left hand side). By default, webapp URL will be http://host.ip:8080/gigwa
+      - ${GIGWA_PORT:-8080}:8080 # You may amend the external port only (left hand side). By default, webapp URL will be http://host.ip:8080/gigwa
     restart: always
     environment:
-      MONGO_IP: ${docker0} # Set your host machine IP here
-      MONGO_PORT: 59393 # Must match mongo container external port
-      MONGO_INITDB_ROOT_USERNAME: yourMongoRootUser
-      MONGO_INITDB_ROOT_PASSWORD: yourMongoRootPassword
+      MONGO_IP: ${GIGWA_MONGO_HOST:-gigwa_db}
+      MONGO_PORT: ${GIGWA_MONGO_PORT:-27017}
+      MONGO_INITDB_ROOT_USERNAME: ${GIGWA_MONGO_USER:-mongo}
+      MONGO_INITDB_ROOT_PASSWORD: ${GIGWA_MONGO_PASSWORD:-mongo}
       HOST_LOCALE: "${LANG}"
-#     casServerURL: https://sso.cirad.fr:443                # URL of the CAS server to use for Single-Sign-On
-#     enforcedWebapRootUrl: http://${docker0}:8080/gigwa    # Gigwa base-URL for CAS to direct to after login. System will attempt guessing it if not provided, but it's always better to specify it
-#     casOrganization: MyOrganization                       # Not required, will only be displayed on login page if provided
-      
+      #     casServerURL: https://sso.cirad.fr:443                # URL of the CAS server to use for Single-Sign-On
+      #     enforcedWebapRootUrl: http://${docker0}:8080/gigwa    # Gigwa base-URL for CAS to direct to after login. System will attempt guessing it if not provided, but it's always better to specify it
+      #     casOrganization: MyOrganization                       # Not required, will only be displayed on login page if provided
+
     volumes:
       - type: volume
-        source: gigwa
+        source: gigwa_data
         target: /usr/local/tomcat/config
-#      - type: bind                      # Uncomment this line to make dumps accessible from the host machine         
-#        source: /tmp/gigwaDockerDumps   # Uncomment this line to make dumps accessible from the host machine (you may also want to set the path you wish to use as source)
-#        target: /root/gigwaDumps        # Uncomment this line to make dumps accessible from the host machine (must match the dumpFolder attribute's value in config.properties)
+  #      - type: bind                      # Uncomment this line to make dumps accessible from the host machine
+  #        source: /tmp/gigwaDockerDumps   # Uncomment this line to make dumps accessible from the host machine (you may also want to set the path you wish to use as source)
+  #        target: /root/gigwaDumps        # Uncomment this line to make dumps accessible from the host machine (must match the dumpFolder attribute's value in config.properties)
   mongo:
-    image: mongo:4.2.21
+    image: ${MONGO_DOCKER_IMAGE:-mongo:4.2.21}
+    container_name: ${GIGWA_CONTAINER_NAME:-gigwa}_db
     restart: always
     command: --profile 0 --slowms 60000 --storageEngine wiredTiger --wiredTigerCollectionBlockCompressor=zstd --directoryperdb --quiet
     ports:
-      - 59393:27017 # You may amend the external port only (left hand side), which must match the above MONGO_PORT
+      - ${GIGWA_MONGO_PORT:-27017}:27017
     environment:
-      MONGO_INITDB_ROOT_USERNAME: yourMongoRootUser
-      MONGO_INITDB_ROOT_PASSWORD: yourMongoRootPassword
+      MONGO_INITDB_ROOT_USERNAME: ${GIGWA_MONGO_USER:-mongo}
+      MONGO_INITDB_ROOT_PASSWORD: ${GIGWA_MONGO_PASSWORD:-mongo}
     volumes:
       - type: volume
-        source: mongo
+        source: gigwa_mongo_data
         target: /data/db
 
 volumes:
-  gigwa:
-  mongo:
+  gigwa_data:
+    name: ${GIGWA_CONTAINER_NAME:-gigwa}_data
+  gigwa_mongo_data:
+    name: ${GIGWA_CONTAINER_NAME:-gigwa}_mongo_data
